name:                  grenade
version:               0.0.1
license:               BSD2
author:                Huw Campbell <huw.campbell@gmail.com>
maintainer:            Huw Campbell <huw.campbell@gmail.com>
copyright:             (c) 2015 Huw Campbell.
synopsis:              grenade
category:              System
cabal-version:         >= 1.8
build-type:            Simple
description:           grenade.

extra-source-files:
    cbits/im2col.h
    cbits/im2col.c

library
  build-depends:
                       base                            >= 4.8         && < 5
                     , bytestring                      == 0.10.*
                     , async
                     , containers
                     , deepseq
                     , either                          == 4.4.*
                     , exceptions                      == 0.8.*
                     , hmatrix
                     , MonadRandom
                     , mtl                             >= 2.2.1      && < 2.3
                     , parallel                        == 3.2.*
                     , primitive
                     , reflection
                     , text                            == 1.2.*
                     , transformers
                     , singletons
                     , vector

  ghc-options:
                       -Wall
  hs-source-dirs:
                       src


  exposed-modules:
                       Grenade
                       Grenade.Core.Network
                       Grenade.Core.Runner
                       Grenade.Core.Shape
                       Grenade.Layers.Crop
                       Grenade.Layers.Convolution
                       Grenade.Layers.Dropout
                       Grenade.Layers.FullyConnected
                       Grenade.Layers.Flatten
                       Grenade.Layers.Fuse
                       Grenade.Layers.Logit
                       Grenade.Layers.Relu
                       Grenade.Layers.Tanh
                       Grenade.Layers.Pad
                       Grenade.Layers.Pooling

                       Grenade.Layers.Internal.Convolution
                       Grenade.Layers.Internal.Pooling
                       Grenade.Layers.Internal.Update

                       Grenade.Recurrent

                       Grenade.Recurrent.Core.Network
                       Grenade.Recurrent.Core.Runner

                       Grenade.Recurrent.Layers.BasicRecurrent
                       Grenade.Recurrent.Layers.LSTM
                       Grenade.Recurrent.Layers.Trivial

                       Grenade.Utils.OneHot

  includes:           cbits/im2col.h
                      cbits/gradient_decent.h
  c-sources:          cbits/im2col.c
                      cbits/gradient_decent.c

  cc-options:         -std=c99 -O3 -msse4.2 -Wall -Werror -DCABAL=1

executable             feedforward
    ghc-options:       -Wall -threaded -O2
    main-is:           main/feedforward.hs
    build-depends:     base
                     , grenade
                     , attoparsec
                     , either
                     , optparse-applicative            == 0.12.*
                     , text                            == 1.2.*
                     , mtl                             >= 2.2.1      && < 2.3
                     , hmatrix
                     , transformers
                     , singletons
                     , MonadRandom

executable             mnist
    ghc-options:       -Wall -threaded -O2
    main-is:           main/mnist.hs
    build-depends:     base
                     , grenade
                     , attoparsec
                     , either
                     , optparse-applicative            == 0.12.*
                     , text                            == 1.2.*
                     , mtl                             >= 2.2.1      && < 2.3
                     , hmatrix                         >= 0.18       && < 0.19
                     , transformers
                     , singletons
                     , MonadRandom
                     , vector

executable             recurrent
    ghc-options:       -Wall -threaded -O2
    main-is:           main/recurrent.hs
    build-depends:     base
                     , grenade
                     , attoparsec
                     , either
                     , optparse-applicative            == 0.12.*
                     , text                            == 1.2.*
                     , mtl                             >= 2.2.1      && < 2.3
                     , hmatrix                         >= 0.18       && < 0.19
                     , transformers
                     , singletons
                     , MonadRandom


executable             shakespeare
    ghc-options:       -Wall -threaded -O2
    main-is:           main/shakespeare.hs
    build-depends:     base
                     , grenade
                     , attoparsec
                     , either
                     , optparse-applicative            == 0.12.*
                     , text                            == 1.2.*
                     , mtl                             >= 2.2.1      && < 2.3
                     , hmatrix                         >= 0.18       && < 0.19
                     , transformers
                     , singletons
                     , vector
                     , MonadRandom
                     , containers


test-suite test
  type:                exitcode-stdio-1.0

  main-is:             test.hs

  ghc-options:         -Wall -threaded -O2

  hs-source-dirs:
                       test

  build-depends:
                       base                            >= 4.8         && < 5
                     , grenade
                     , ambiata-disorder-core
                     , ambiata-disorder-jack
                     , hmatrix
                     , mtl
                     , singletons
                     , text                            == 1.2.*
                     , typelits-witnesses
                     , constraints
                     , QuickCheck                      >= 2.7        && < 2.9
                     , quickcheck-instances            == 0.3.*
                     , MonadRandom
                     , random
                     , ad
                     , reflection


benchmark bench
  type:                exitcode-stdio-1.0

  main-is:             bench.hs

  ghc-options:         -Wall -threaded -O2

  hs-source-dirs:
                       bench

  build-depends:
                       base                            >= 3          && < 5
                     , bytestring                      == 0.10.*
                     , criterion                       == 1.1.*
                     , grenade
                     , hmatrix

benchmark bench-lstm
  type:                exitcode-stdio-1.0

  main-is:             bench-lstm.hs

  ghc-options:         -Wall -threaded -O2

  hs-source-dirs:
                       bench

  build-depends:
                       base                            >= 3          && < 5
                     , bytestring                      == 0.10.*
                     , criterion                       == 1.1.*
                     , grenade
                     , hmatrix
