name:                  grenade-examples
version:               0.0.1
license:               BSD2
license-file:          LICENSE
author:                Huw Campbell <huw.campbell@gmail.com>
maintainer:            Huw Campbell <huw.campbell@gmail.com>
copyright:             (c) 2016-2017 Huw Campbell.
synopsis:              grenade-examples
category:              System
cabal-version:         >= 1.8
build-type:            Simple
description:           grenade-examples

source-repository head
  type: git
  location: https://github.com/HuwCampbell/grenade.git

library

executable             feedforward
    ghc-options:       -Wall -threaded -O2
    main-is:           main/feedforward.hs
    build-depends:     base
                     , grenade
                     , attoparsec
                     , bytestring
                     , cereal
                     , either
                     , optparse-applicative            >= 0.13       && < 0.16
                     , text                            == 1.2.*
                     , mtl                             >= 2.2.1      && < 2.3
                     , hmatrix
                     , transformers
                     , singletons
                     , semigroups
                     , MonadRandom

executable             mnist
    ghc-options:       -Wall -threaded -O2
    main-is:           main/mnist.hs
    build-depends:     base
                     , grenade
                     , attoparsec
                     , either
                     , optparse-applicative            >= 0.13       && < 0.16
                     , text                            == 1.2.*
                     , mtl                             >= 2.2.1      && < 2.3
                     , hmatrix                         >= 0.18       && < 0.21
                     , transformers
                     , semigroups
                     , singletons
                     , MonadRandom
                     , vector

executable             gan-mnist
    ghc-options:       -Wall -threaded -O2
    main-is:           main/gan-mnist.hs
    build-depends:     base
                     , grenade
                     , attoparsec
                     , bytestring
                     , cereal
                     , either
                     , optparse-applicative            >= 0.13       && < 0.16
                     , text                            == 1.2.*
                     , mtl                             >= 2.2.1      && < 2.3
                     , hmatrix                         >= 0.18       && < 0.21
                     , transformers
                     , semigroups
                     , singletons
                     , MonadRandom
                     , vector

executable             recurrent
    ghc-options:       -Wall -threaded -O2
    main-is:           main/recurrent.hs
    build-depends:     base
                     , grenade
                     , attoparsec
                     , either
                     , optparse-applicative            >= 0.13       && < 0.16
                     , text                            == 1.2.*
                     , mtl                             >= 2.2.1      && < 2.3
                     , hmatrix                         >= 0.18       && < 0.21
                     , transformers
                     , semigroups
                     , singletons
                     , MonadRandom

executable             shakespeare
    ghc-options:       -Wall -threaded -O2
    main-is:           main/shakespeare.hs
    build-depends:     base
                     , grenade
                     , attoparsec
                     , bytestring
                     , cereal
                     , either
                     , optparse-applicative            >= 0.13       && < 0.16
                     , text                            == 1.2.*
                     , mtl                             >= 2.2.1      && < 2.3
                     , hmatrix                         >= 0.18       && < 0.21
                     , transformers
                     , semigroups
                     , singletons
                     , vector
                     , MonadRandom
                     , containers
